<resources>
    <string name="app_name">FixItFitness</string>
    <string name="p2intro_name">Build Your Prevention Plan </string>
    <string name="q1_name">What is your name?</string>
    <string name="q2_name">What is your age? (years)</string>
    <string name="q3_name">What is your height? (cm)</string>
    <string name="q4_name">What is your weight? (kg)</string>
    <string name="q5_name">What is your current level of football?</string>
    <string name="intro_name">Welcome to Fix-It-Fitness</string>
    <string name="p1msg1_name">Prevention Planning</string>
    <string name="p1msg2_name">Strength and Conditioning</string>
    <string name="p1msg3_name">Activity Scheduling</string>
    <string name="continue_name">Continue</string>
    <string name="helpmsg">Answer all questions in the text fields down below</string>
</resources>