<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="388dp"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="88dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="270dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q1_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q2_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q3_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q4_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q5_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="278dp"
        android:layout_height="186dp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="66dp"
        tools:srcCompat="@drawable/imgfixitfitness" />

    <Button
        android:id="@+id/button"
        android:layout_width="213dp"
        android:layout_height="52dp"
        android:text="Continue"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="663dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="363dp"
        android:layout_height="78dp"
        android:fontFamily="@font/arbutus"
        android:text="Build Your Prevention Plan!"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="5dp" />

</androidx.constraintlayout.widget.ConstraintLayout>