<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="276dp"
        android:layout_height="388dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538">

        <TextView
            android:id="@+id/Q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q1_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q2_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q3_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q4_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextNumberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:inputType="numberPassword" />

        <TextView
            android:id="@+id/Q5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arbutus"
            android:text="@string/q5_name"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/arbutus"
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="213dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:text="Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="363dp"
        android:layout_height="78dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/arbutus"
        android:text="Build Your Prevention Plan!"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus"
        android:text="Answer all questions in the text fields down below"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>