<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="37dp"
        android:layout_height="58dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="74dp"
        android:contentDescription="@string/p1msg3_name"
        android:src="@drawable/baseline_edit_calendar_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="36dp"
        android:layout_height="47dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/p1msg1_name"
        android:src="@drawable/baseline_checklist_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="37dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/p1msg2_name"
        android:rotation="-45"
        android:src="@drawable/baseline_fitness_center_24"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="76dp"
        android:backgroundTint="#C70606"
        android:contentDescription="@string/intro_name"
        android:fontFamily="@font/arbutus"
        android:text="@string/intro_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="106dp"
        android:contentDescription="@string/intro_name"
        android:src="@drawable/imgfixitfitness"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/p1msg2_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/p1msg3_name"
        android:fontFamily="@font/arbutus"
        android:text="@string/p1msg3_name"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="5dp"
        android:onClick="onContinueClicked"
        android:text="@string/continue_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/p1msg1_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />



</androidx.constraintlayout.widget.ConstraintLayout>